# cosc383-project4

./: .gitignore  Cargo.toml  README.md  answers.typ  flake.nix  hints.txt  pyproject.toml  writeup.typ
assets/: plain_image_data.json
assets/project-images/recovered-data/: hide-text.txt
src/: assemble.rs  automatic.rs  bit_patterns.rs  bitvec_extensions.rs  decode.rs  detect.rs  extensions.rs  extract.rs  helpers.rs  iteration_order.rs  main.rs  transform.rs
stegtools/: __init__.py  bit_patterns.py  patterns.py  visualization.py
tests/: test_bit_patterns.py
