[tool.poetry]
name = "stegtools"
version = "0.1.0"
description = ""
authors = ["Jesse Looney <42242696+jesselooney@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imageio = "^2.36.0"
ruff = "^0.7.1"
bitarray = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
